# prideful-nat-traversal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: concepts.doc  firehose.txt  multihost.txt  states.txt  whitepaper.txt
samples/: pilot.c
src/include/: pnt.h
src/main/: nt.c  socket.c
